--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: WhatsApp Group Links - Join and share WhatsApp Groups 
+title: WhatsApp Group Links - Join and Share WhatsApp Groups 
 ---
 
 {% if page.url == "/" %}
