groups list changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ title: WhatsApp Group Links - Join and Share WhatsApp Groups
     </p>
 </div>
 
+<div style ="align:center">
+    {% include groups-list.html %}
+</div>
 
 <!-- Featured
 ================================================== -->
